util: avoid use of URL constructors in URLUtils
URL constructors are deprecated at Java 20.

One test is removed here, since it relies on the two-argument makeURL
method behaving in a surprisingly different way than the one-argument
method.  Hopefully this will not cause regression issues; probably not,
since the 2-arg makeURL is not very widely used.